# oh_sched_web

./: .gitignore  README.md  app.py  oh_prefs_toy.csv  pyproject.toml
oh_sched_web/: __init__.py  __main__.py  app.py  aws.py  constants.py  render.py  std_tools.py
oh_sched_web/templates/: index.html  results.html  timezones.json
static/: usage.csv
templates/: index.html
