[tool.poetry]
name = "oh_sched_web"
version = "0.1.0"
description = ""
authors = ["matt higger <matt.higger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
oh-sched = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
